--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ flask==3.1.0
 gunicorn==23.0.0
 trimesh==4.11.2
 pymeshfix==0.17.0
+pyvista==0.44.2
 manifold3d==3.3.2
 numpy==2.2.3
 stripe==11.4.1
 rtree==1.4.1
+scipy==1.15.2
+point-cloud-utils==0.34.0
 networkx==3.2.1
 fast-simplification==0.1.13
